add responsive design

--- a/src/components/modals/Modals.scss
+++ b/src/components/modals/Modals.scss
@@ -61,3 +61,11 @@
 		right: 0;
 	}
 }
+@media only screen and (max-width: 576px) {
+	.input-field {
+		width: 70vw !important;
+		input[type="color"] {
+			width: 70% !important;
+		}
+	}
+}
