--- a/src/components/tasks/Tasks.scss
+++ b/src/components/tasks/Tasks.scss
@@ -103,3 +103,25 @@
 		}
 	}
 }
+
+@media only screen and (max-width: 1200px) {
+	.task-box {
+		width: 50%;
+	}
+}
+@media only screen and (max-width: 992px) {
+	.task-box {
+		width: 65%;
+	}
+}
+@media only screen and (max-width: 768px) {
+	.task-box {
+		width: 85%;
+	}
+}
+@media only screen and (max-width: 576px) {
+	.task-box {
+		min-height: 65vh;
+		max-height: 90vh;
+	}
+}
