--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,14 @@
 	padding: 0;
 }
 body {
+	font-family: "Montserrat";
 	background-image: linear-gradient(to right, #0084a7, #9a0ec3, #ff0086);
 }
 .App {
-	padding-top: 90px;
+	padding: 90px 0;
+}
+@media only screen and (max-width: 576px) {
+	.App {
+		padding: 40px 0;
+	}
 }
